# x264VSproject

source/: CMakeLists.txt  config.h  x264.c  x264.def.in  x264.pc.in  x264.rc.in  x264_config.h.in
source/cmake/: CMakeASM_YASMInformation.cmake  clean-generated.cmake  cmake_uninstall.cmake.in  version.cmake
source/common/: CMakeLists.txt  threadpool.c
source/common/x86/: pixel-a.asm  x86inc.asm
source/encoder/: CMakeLists.txt  analyse.c  rdo.c  slicetype.c
